KL mobile mainnav spacing fix attempt v6

--- a/style.css
+++ b/style.css
@@ -4721,7 +4721,7 @@ span.highlight {
 }
 #hero-section #mobile-nav, #subpage-hero #mobile-nav {
 	position: absolute;
-	bottom: 8vh;
+	bottom: 9.5vh;
 	left: 0;
 	padding: 0 20px;
 	width: 100%;
@@ -5650,26 +5650,6 @@ svg.full-logo {
 
 @media (min-width: 784px) {
 	#main-nav a#logo { display:none; !important; }
-}
-
-@media \\0 screen {
-	#hero-section #mobile-nav, #subpage-hero #mobile-nav {
-		position: absolute;
-		bottom: 11vh; !important;
-		left: 0;
-		padding: 0 20px;
-		width: 100%;
-		text-align: center; }
-}
-	
-@media \0 all {
-	#hero-section #mobile-nav, #subpage-hero #mobile-nav {
-		position: absolute;
-		bottom: 11vh; !important;
-		left: 0;
-		padding: 0 20px;
-		width: 100%;
-		text-align: center; }
 }
 
 
